--- a/Notebooks/Text2Vect.ipynb
+++ b/Notebooks/Text2Vect.ipynb
@@ -15,16 +15,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train sample size: (16122, 25)\n",
-      "Validation sample size: (4566, 25)\n",
-      "Test sample size: (4567, 25)\n"
+      "Train sample size: (161, 25)\n",
+      "Validation sample size: (46, 25)\n",
+      "Test sample size: (46, 25)\n"
      ]
     }
    ],
@@ -36,7 +36,7 @@
     "df_val = pd.read_csv('../data/val_data.csv')\n",
     "df_test = pd.read_csv('../data/test_data.csv')\n",
     "\n",
-    "# Create samples with 5% of each DataFrame\n",
+    "# Create samples with 1% of each DataFrame\n",
     "df_train_sample = df_train.sample(frac=0.001, random_state=1)\n",
     "df_val_sample = df_val.sample(frac=0.001, random_state=1)\n",
     "df_test_sample = df_test.sample(frac=0.001, random_state=1)\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,14 +69,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the PyTorch model were not used when initializing the TF 2.0 model TFBertModel: ['cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.weight', 'cls.seq_relationship.bias', 'cls.predictions.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.dense.weight']\n",
+      "/Users/khanhdam/.local/share/virtualenvs/renting-JHnSpTKC/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Some weights of the PyTorch model were not used when initializing the TF 2.0 model TFBertModel: ['cls.seq_relationship.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.seq_relationship.weight']\n",
       "- This IS expected if you are initializing TFBertModel from a PyTorch model trained on another task or with another architecture (e.g. initializing a TFBertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing TFBertModel from a PyTorch model that you expect to be exactly identical (e.g. initializing a TFBertForSequenceClassification model from a BertForSequenceClassification model).\n",
       "All the weights of TFBertModel were initialized from the PyTorch model.\n",
@@ -97,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,63 +152,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df_train_sample = concat_vectors_with_pca(df_train_sample,'description')\n",
-    "# df_train_sample = concat_vectors_with_pca(df_train_sample, 'facilities')"
+    "df_train_sample = concat_vectors_with_pca(df_train_sample,'description')\n",
+    "df_train_sample = concat_vectors_with_pca(df_train_sample, 'facilities')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(16122, 45)"
+       "(161, 45)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# df_train_sample.shape"
+    "df_train_sample.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(16122, 43)\n"
+      "(161, 43)\n"
      ]
     }
    ],
    "source": [
-    "# df_train_sample.drop(columns = text_columns, axis=1, inplace=True)\n",
-    "# print(df_train_sample.shape)\n",
-    "# df_train_sample.to_csv('../data/vect_train_data_sample.csv', index=False)"
+    "df_train_sample.drop(columns = text_columns, axis=1, inplace=True)\n",
+    "print(df_train_sample.shape)\n",
+    "df_train_sample.to_csv('../data/vect_train_data_sample.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4566, 43)\n"
+      "(46, 43)\n"
      ]
     }
    ],
@@ -220,14 +222,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4567, 43)\n"
+      "(46, 43)\n"
      ]
     }
    ],
