--- a/Notebooks/Text2Vect.ipynb
+++ b/Notebooks/Text2Vect.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "The initial principal components (which explain the most variance) are likely to capture more general, high-level features of the text data. If the primary use case involves understanding or clustering texts based on broad topics or sentiments, PCA-reduced embeddings may still be effective.\n",
     "\n",
-    "Because of limited resources, I will perform the method on only 2% of the data."
+    "Because of limited resources, I will perform the method on only 2% of the data. In .py files, I created and tested with 10% data. Please read README.md for more details."
    ]
   },
   {
@@ -22,9 +22,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train sample size: (161, 25)\n",
-      "Validation sample size: (46, 25)\n",
-      "Test sample size: (46, 25)\n"
+      "Train sample size: (3224, 25)\n",
+      "Validation sample size: (913, 25)\n",
+      "Test sample size: (913, 25)\n"
      ]
     }
    ],
@@ -37,9 +37,9 @@
     "df_test = pd.read_csv('../data/test_data.csv')\n",
     "\n",
     "# Create samples with 1% of each DataFrame\n",
-    "df_train_sample = df_train.sample(frac=0.001, random_state=1)\n",
-    "df_val_sample = df_val.sample(frac=0.001, random_state=1)\n",
-    "df_test_sample = df_test.sample(frac=0.001, random_state=1)\n",
+    "df_train_sample = df_train.sample(frac=0.02, random_state=1)\n",
+    "df_val_sample = df_val.sample(frac=0.02, random_state=1)\n",
+    "df_test_sample = df_test.sample(frac=0.02, random_state=1)\n",
     "\n",
     "# Optionally, you can check the sizes of your samples\n",
     "print(f\"Train sample size: {df_train_sample.shape}\")\n",
@@ -78,7 +78,7 @@
      "text": [
       "/Users/khanhdam/.local/share/virtualenvs/renting-JHnSpTKC/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Some weights of the PyTorch model were not used when initializing the TF 2.0 model TFBertModel: ['cls.predictions.transform.dense.weight', 'cls.seq_relationship.bias', 'cls.seq_relationship.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.bias']\n",
+      "Some weights of the PyTorch model were not used when initializing the TF 2.0 model TFBertModel: ['cls.seq_relationship.bias', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.bias']\n",
       "- This IS expected if you are initializing TFBertModel from a PyTorch model trained on another task or with another architecture (e.g. initializing a TFBertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing TFBertModel from a PyTorch model that you expect to be exactly identical (e.g. initializing a TFBertForSequenceClassification model from a BertForSequenceClassification model).\n",
       "All the weights of TFBertModel were initialized from the PyTorch model.\n",
@@ -168,7 +168,7 @@
     {
      "data": {
       "text/plain": [
-       "(161, 45)"
+       "(3224, 45)"
       ]
      },
      "execution_count": 9,
@@ -189,7 +189,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(161, 43)\n"
+      "(3224, 43)\n"
      ]
     }
    ],
@@ -208,7 +208,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(46, 43)\n"
+      "(913, 43)\n"
      ]
     }
    ],
@@ -229,7 +229,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(46, 43)\n"
+      "(913, 43)\n"
      ]
     }
    ],
